# Constructions-company

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
contracting_company/: asgi.py  settings.py  urls.py  wsgi.py
